up: refactor code