@@ -34,7 +34,7 @@ public class MongoReadingTest {
                 .name(testName)
                 .passages(passages.stream()
                         .map(MongoPassage::toPassage)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
@@ -44,11 +44,11 @@ public class MongoReadingTest {
                 .testName(testName)
                 .answers(passages.stream()
                         .flatMap(passage -> passage.getAnswer().stream())
-                        .collect(Collectors.toList())
+                        .toList()
                 )
                 .recommendations(passages.stream()
                         .flatMap(passage -> passage.toRecommendationData().stream())
-                        .collect(Collectors.toList())
+                        .toList()
                 )
                 .build();
     }
@@ -66,7 +66,7 @@ public class MongoReadingTest {
                     answerIndex.addAndGet(numberOfQuestions); // Cập nhật answerIndex
                     return new MongoPassage(passage, answers);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
